fix oveflow and text align part3

--- a/css/styles.css
+++ b/css/styles.css
@@ -1061,10 +1061,11 @@ input[type='checkbox'] {
 	/* margin-left: 3.125rem; */
   overflow-y: auto;
   max-height: 180px;
+
 }
 
 .accordion img{
-  height:1.5rem;
+  height:2.5rem;
   border-radius: 5px;
   background-color: #eee;
 }
